# ghscope

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
ghscope/: __init__.py  cli.py
ghscope/analytics/: activity.py  aggregates.py  timelines.py
ghscope/auth/: app.py  token.py
ghscope/client/: graphql.py  rest.py
ghscope/collectors/: commits.py  issues.py  pull_requests.py  repos.py  users.py
ghscope/exporters/: csv.py  html.py  json.py  markdown.py  pdf.py
ghscope/models/: __init__.py  commit.py  issue.py  pull_request.py  repo.py  user.py
ghscope/report/: builder.py  context.py
ghscope/report/templates/: report.html.j2  report.md.j2
tests/: test_analytics.py  test_cli_smoke.py  test_models.py
